# rustmatic

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: device.rs  device_manager.rs  lib.rs  process_image.rs
docs/: book.toml
docs/src/: SUMMARY.md  devices.md  overview.md  runtime.md
dummy-input/: Cargo.toml
dummy-input/src/: lib.rs
gpio/: Cargo.toml
gpio/examples/: gpio-example.rs
gpio/src/: lib.rs
hardware-config/src/: lib.rs
iec/: Cargo.toml  grammar.md
iec-std/: Cargo.toml  intrinsics.h
iec-std/src/: buffer.rs  ctypes.rs  intrinsics.rs  lib.rs  macros.rs  sys.rs  time.rs
iec/src/: frontend.rs  lib.rs  utils.rs
iec/src/hir/: mod.rs
iec/src/lowering/: mod.rs  st.rs
iec/src/mir/: mod.rs
iec/src/syntax/: mod.rs
runtime/: Cargo.toml
runtime/examples/: basic-example.rs  wasm-program.rs
runtime/src/: device_manager.rs  lib.rs
runtime/tests/: wasm-program.rs
runtime/tests/data/: example_program.rs
src/: main.rs  plc.rs
structured-text/: Cargo.toml
structured-text/src/: ast.rs  error.rs  grammar.pest  lib.rs  parser.rs
structured-text/tests/: smoke_test.rs
structured-text/tests/data/: case_statement.st  first_wikipedia_sample.st  function_and_program.st  function_block.st  if_chain.st  if_start_while_initialized_prime_system.st  simple_program.st
wasm/: Cargo.toml
wasm-test/: Cargo.toml
wasm-test/src/: compile.rs  environment.rs  lib.rs  test_case.rs
wasm/examples/: basic-runtime.rs  example_program.c
wasm/examples/wasm-programs/: example-program.rs
wasm/examples/wasm-programs/example-program/: Cargo.toml
wasm/src/: intrinsics.h  lib.rs
wasm/tests/: compiletest.rs  data.rs
wasm/tests/data/: blinky.json  blinky.rs  example_program.json  example_program.rs  set_outputs.json  set_outputs.rs
