[package]
name = "rustmatic"
version = "0.1.0"
authors = ["NOP0 <33583294+NOP0@users.noreply.github.com>", "Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "The entrypoint into the rustmatic runtime"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
rustmatic-core = {path = "./core"}
rustmatic-runtime = { path = "./runtime" }
# rustmatic-gpio = { path = "./gpio" }
rustmatic-dummy-input = { path = "./dummy-input" }

[workspace]
members = ["core", "runtime", "structured-text", "iec", "iec-std", "wasm", "wasm-test"]
exclude = ["wasm/examples/wasm-programs/*"]

[patch.crates-io]
wasmer-runtime = { git = "https://github.com/wasmerio/wasmer", rev = "8a13917ec5b327d47b302c4002553d279536db54" }