[package]
name = "rustmatic-gpio"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "A device which gives the Rustmatic PLC runtime access to the Linux GPIO interface."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.5.4"
rustmatic-core = { path = "../core" }
