[package]
name = "rustmatic-gpio"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "A device which gives the Rustmatic PLC runtime access to the Linux GPIO interface."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.2"
rustmatic-core = { path = "../core" }
rustmatic-runtime = { path = "../runtime" }
