[package]
name = "rustmatic-iec"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "An IEC 61131-3 compiler for the rustmatic runtime."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustmatic-structured-text = { path = "../structured-text" }
specs = "0.15"
specs-derive = "0.4"
codespan = "0.6"
shred-derive = "0.6"
codespan-reporting = "0.6"
thiserror = "1.0"
log = "0.4.8"
