[package]
name = "rustmatic-wasm-test"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde_derive = "1"
serde = "1"
anyhow = "1"
rustmatic-wasm = { path = "../wasm" }
log = "0.4"
tempfile = "3.1"
humantime-serde = "0.1.1"
