[package]
name = "example-program"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rustmatic-iec-std = { path = "../../../../iec-std/" }

[workspace]
# Workaround for https://github.com/rust-lang/cargo/issues/6745